--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,101 @@
-.App {
+#root {
+  width: 100vw;
+  height: auto;
+  margin: 0 auto;
+  padding: 2rem;
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  justify-content: space-around;
+  background-color: #1e1e1e;
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
+.logo {
+  height: 6em;
+  padding: 1.5em;
+  will-change: filter;
+  transition: filter 300ms;
+}
+.logo:hover {
+  filter: drop-shadow(0 0 2em #646cffaa);
+}
+.logo.react:hover {
+  filter: drop-shadow(0 0 2em #61dafbaa);
 }
 
-@keyframes App-logo-spin {
+@keyframes logo-spin {
   from {
     transform: rotate(0deg);
   }
   to {
     transform: rotate(360deg);
   }
+}
+
+@media (prefers-reduced-motion: no-preference) {
+  a:nth-of-type(2) .logo {
+    animation: logo-spin infinite 20s linear;
+  }
+}
+
+.App {
+  width: 100%;
+  height: 100vh;
+  height: auto;
+  font-family: sans-serif;
+  text-align: center;
+  /* background-color: #1e1e1e; */
+}
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+.moviesWrapper {
+  width: 70%;
+  height: auto;
+  margin: auto;
+  display: flex;
+  justify-content: space-around;
+  flex-direction: column;
+}
+.moviesList {
+  /* width: 80%; */
+  height: auto;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 15px;
+}
+.movieItem {
+  width: 300px;
+  border-radius: 15px;
+  box-shadow: 0 0 20px #eb5454;
+}
+
+.imgWrapper {
+  width: 100%;
+  height: 70%;
+}
+
+.movieFeat {
+  width: 100%;
+  height: 30%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  margin-bottom: 10px;
+}
+
+.movieFeatMain {
+  margin-bottom: 10px;
+}
+img {
+  width: 100%;
+  height: 100%;
+  border-radius: 15px 15px 0 0;
+}
+
+.removed {
+  background-color: red;
 }
