--- a/src/App.css
+++ b/src/App.css
@@ -47,36 +47,32 @@
   /* background-color: #1e1e1e; */
 }
 .header {
+  width: 100%;
   display: flex;
-  align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
 }
 
 .moviesWrapper {
   width: 70%;
-  height: auto;
   margin: auto;
-  display: flex;
-  justify-content: space-around;
-  flex-direction: column;
+  margin-top: 50px;
 }
 .moviesList {
-  /* width: 80%; */
-  height: auto;
   display: flex;
+  justify-content: center;
   flex-wrap: wrap;
   gap: 15px;
 }
-.movieItem {
+/* .movieItem {
   width: 300px;
   border-radius: 15px;
   box-shadow: 0 0 20px #eb5454;
-}
+} */
 
-.imgWrapper {
+/* .imgWrapper {
   width: 100%;
   height: 70%;
-}
+} */
 
 .movieFeat {
   width: 100%;
@@ -87,14 +83,14 @@
   margin-bottom: 10px;
 }
 
-.movieFeatMain {
+/* .movieFeatMain {
   margin-bottom: 10px;
-}
-img {
+} */
+/* img {
   width: 100%;
   height: 100%;
   border-radius: 15px 15px 0 0;
-}
+} */
 
 .removed {
   background-color: red;
